tests/baselines/reference/missingDomElement_UsingDomLib.errors.txt
missingDomElement_UsingDomLib.ts(3,37): error TS2339: Property 'textContent' does not exist on type 'HTMLMissingElement'.


==== missingDomElement_UsingDomLib.ts (1 errors) ====
    interface HTMLMissingElement {}
    
    (({}) as any as HTMLMissingElement).textContent;
                                        ~~~~~~~~~~~
!!! error TS2339: Property 'textContent' does not exist on type 'HTMLMissingElement'.
    